# uj_fizyka

./: CMakeLists.txt  main.cpp
headers/: AABB.h  Icosahedron.h  billGLfunctions.h  billengine.h  billintegrators.h  billmaterialpoint.h  billvector.h  billwindow.h  box.h  oscillator.h  plane.h  triangle.h
src/: billGLfunctions.cpp  billengine.cpp  billmaterialpoint.cpp  billwindow.cpp  box.cpp  oscillator.cpp
